<resources>
    <string name="app_name">VenueVoyage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_terms">Terms and Conditions</string>
    <string name="welcome">Welcome!</string>
    <string name="login_desc">Sign in or register to save check your favorite venues </string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account_already">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="logout">Logout</string>
    <string name="name_hint">e.g. Ahmed</string>
    <string name="email_hint">hi@example.com</string>
    <string name="age_hint">eg. 28</string>
    <string name="password_hint">Password</string>
    <string name="create_password_hint">Create password</string>
    <string name="connection_error">Connection Error</string>
    <string name="no_internet">No internet connection please try again later</string>
    <string name="some_error">Some error occurred, try again later</string>
    <string name="list_no_result">Sorry, There are no results here!</string>
    <string name="retry">Retry</string>
    <string name="name">Name</string>
    <string name="age_error">Age should be above 18</string>
    <string name="password_error"> Password should be 8 characters long with Alphanumeric and Special Characters</string>
    <string name="email_error">Invalid Email</string>
    <string name="fill_this_field">Please fill this field</string>
    <string name="must_confirm_password">Confirm Password must match Password</string>
    <string name="registered_success">Registered Successfully, Please Login</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="location_permission_is_required">Location permission is required for seamless experience</string>
</resources>