<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="mainViewModel"
            type="com.fady.venuevoyage.presentation.ui.main.MainViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/loginDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:text="@string/create_account"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/firstNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:inputType="text"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lastNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:inputType="text"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ageLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age_hint"
                        android:inputType="number"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/passwordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/create_password_hint"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textAlignment="viewStart" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/emailLay" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPassword_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textAlignment="viewStart" />
                </com.google.android.material.textfield.TextInputLayout>

                <include
                    android:id="@+id/registerBTN"
                    layout="@layout/main_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:title="@{@string/sign_up}" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/loginTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_BTN">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_account_already"
                        android:textAlignment="center"
                        android:textColor="@color/grey_border"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/toLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/log_in"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>