<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="mainViewModel"
            type="com.fady.venuevoyage.presentation.ui.main.MainViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:mainViewModel="@{mainViewModel}" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/emailPhoneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:editable="false"
                        android:inputType="text"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:editable="false"
                        android:inputType="text"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:editable="false"
                        android:inputType="text"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/age"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginDesc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ageLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:textColorHint="@color/font_grey"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color"
                    app:layout_constraintTop_toBottomOf="@+id/emailPhoneTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:editable="false"
                        android:inputType="text"
                        android:padding="15dp" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>